--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(231, 229, 224);
+  background: linear-gradient(
+    to bottom right,
+    rgb(214, 209, 209),
+    rgb(221, 214, 193)
+  );
 }
 
 section {
