--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,11 @@ section {
   margin: 30px 50px;
 }
 
+p,
+a {
+  font-size: 14px;
+}
+
 a {
   text-decoration: none;
 }
@@ -29,7 +34,7 @@ ul {
 h2 {
   font-family: "Lato", sans-serif;
   font-weight: 700;
-  font-size: 28px;
+  font-size: 24px;
   line-height: 1.2;
 }
 
@@ -92,18 +97,18 @@ svg {
 }
 
 .project-experience-list {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .name {
   margin-bottom: 24px;
-  font-size: 38px;
+  font-size: 32px;
   font-weight: 700;
   color: black;
 }
 
 .desc {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 400;
 }
 
