--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,7 @@
 .container {
   display: flex;
   width: 800px;
-  background: linear-gradient(
-    to bottom right,
-    rgb(214, 209, 209),
-    rgb(221, 214, 193)
-  );
+  background: linear-gradient(90deg, #e0f0e1, #c4e9ca, #a8c3d8);
 }
 
 section {
