--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ section {
 
 p,
 a {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 a {
@@ -27,6 +27,7 @@ ul {
 }
 
 h2 {
+  margin: 15px 0;
   font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 24px;
@@ -55,7 +56,7 @@ svg {
 }
 
 .img {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   border-radius: 50%;
 }
 
